<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".presentation.character_detail.CharacterDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBackButton"
            android:layout_width="32dp"
            android:layout_height="?attr/actionBarSize"
            android:src="@drawable/ic_back_arrow"
            android:tint="@color/white_80"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintBottom_toBottomOf="@id/txtName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/txtName" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/yellow"
            android:textSize="18sp"
            android:textStyle="bold"
            android:transitionName="nameViewTransition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgBackButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Luke Skywalker" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtCharacterDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/character_details"
            android:textColor="@color/white_80"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvCharacterDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCharacterDetail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/full_name"
                            android:textColor="@color/light_gray"
                            android:textSize="12sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txtDetailName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white_80"
                            tools:text="Luke Skywalker" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/skin_color"
                            android:textColor="@color/light_gray"
                            android:textSize="12sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txtSkinColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white_80"
                            tools:text="FAIR" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hair_color"
                            android:textColor="@color/light_gray"
                            android:textSize="12sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txtHairColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white_80"
                            tools:text="BLOND" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="16dp"
                    android:background="#7c7c7c"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/height"
                            android:textColor="@color/light_gray"
                            android:textSize="12sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txtHeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white_80"
                            android:transitionName="heightViewTransition"
                            tools:text="172 cm" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mass"
                            android:textColor="@color/light_gray"
                            android:textSize="12sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txtMass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white_80"
                            tools:text="77 kg" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/eye_color"
                            android:textColor="@color/light_gray"
                            android:textSize="12sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txtEyeColor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white_80"
                            tools:text="BLUE" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider_top"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="16dp"
                    android:background="#7c7c7c"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/homeworld"
                            android:textColor="@color/light_gray"
                            android:textSize="12sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txtHomeWorld"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white_80"
                            android:visibility="gone"
                            tools:text="Tatooine" />

                        <ProgressBar
                            android:id="@+id/progressBarHomeWord"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:indeterminateTint="@color/yellow"
                            android:indeterminateTintMode="src_in"
                            android:visibility="visible"
                            app:layout_constraintBottom_toBottomOf="@+id/tv_home_world"
                            app:layout_constraintEnd_toEndOf="@+id/tv_home_world"
                            app:layout_constraintStart_toStartOf="@+id/tv_home_world"
                            app:layout_constraintTop_toTopOf="@+id/tv_home_world" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textColor="@color/light_gray"
                            android:textSize="12sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txtGender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white_80"
                            android:transitionName="genderViewTransition"
                            tools:text="MALE" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/birth_year"
                            android:textColor="@color/light_gray"
                            android:textSize="12sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txtBirthYear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white_80"
                            tools:text="19BBY" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_movies_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/movies"
            android:textColor="@color/white_80"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvCharacterDetail" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main"
            app:layout_constraintStart_toStartOf="@+id/tv_movies_header"
            app:layout_constraintTop_toBottomOf="@+id/tv_movies_header">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_margin="8dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:spanCount="2"
                tools:listitem="@layout/item_movies" />

            <ProgressBar
                android:id="@+id/progress_movies"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/yellow"
                android:indeterminateTintMode="src_in"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtMoviesError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>